(library
  (name worker)
  (modules (:standard \ commands))
  (libraries
    unix
    ocaml-compiler-libs.common
    ocaml-compiler-libs.bytecomp
    ocaml-compiler-libs.optcomp
    worker_cmd))

(library
  (name worker_cmd)
  (modules commands)
  (modules_without_implementation commands)
  (libraries unix))
